Chapter21/gateway_api/00-gateway-api-demo-ns.yaml
# aks-agic/00-agic-demo-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    project: gateway-api-demo
  name: gateway-api-demo
